 - gui: removed font_string::get_shadow_y_offset()
 - gui: removed uiobject::set_abs_point and uiobject::set_rel_point, use set_point() instead
 - gui: removed anchor::get_abs_x/get_abs_y and added anchor::get_point
 - gui: removed uiobject::get_abs_width/height and added uiobject::get_dimensions()
 - gui: removed uiobject::get_apparent_width/height and added uiobject::get_apparent_dimensions()
 - gui: edit_box::set_text_insets now takes a single bounds2f argument
 - gui: frame::on_script now takes the full script name ("OnUpdate" vs "Update")
 - gui: frame::on_script now takes a 'const event_data&' instead of an 'event*' argument
 - gui: font_string::set_offset now takes a single vector2f argument
 - gui: font_string::set_shadow_offset now takes a single vector2f argument
 - gui: the GUI will now properly handle render window being resized
 - gui: all UI objects are now managed with explicit single ownership (unique_ptr)
 - gui: added frame_renderer class interface to clarify the frame class
 - gui: only frames can now be flagged as having a frame_renderer
 - gui: manager now inherits from event_manager instead of owning one (fix chicken/egg problem)
 - gui: "frame_level" has been renamed to just "level"
 - gui: frame::get_children and frame::get_regions return views rather than containers
 - gui: added gui::down_cast for safer down casting
 - gui: removed clear_links() in favor of using destructors
 - gui: added mechanism to handle most cases where a widget is destroyed in a callback
 - gui: relative sizing is now only applicable to XML <Size>
 - gui: split anchor into anchor (logic) + anchor_data (data)
 - gui: uiobject::set_parent() and uiobject::set_name() are no longer public
 - gui: added OnReceiveDrag for frame
 - gui: added OnCursorChanged for edit_box
 - gui: added OnUpPressed and OnDownPressed callbacks to edit_box
 - gui: added set_cursor_position()/get_cursor_position() to edit_box
 - gui: added clear_history() to edit_box